--- a/movieshop/style.css
+++ b/movieshop/style.css
@@ -13,6 +13,20 @@
     background-color: #0F0F0F !important;
     color: #fff !important;
 }
+.bg-mix-blue{
+    background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%);;
+    color: #fff !important;
+}
+.bg-mix-blue::before{
+    content: ' ';
+    position: fixed;
+    background-color: #141414 !important;
+    color: #fff !important;
+    opacity: 0.8;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 .card:hover{
     background-color: #141414 !important;
     transition: 0.3s;
